--- a/Client/Dt.Sample/ListView/LvInScrollViewer.xaml
+++ b/Client/Dt.Sample/ListView/LvInScrollViewer.xaml
@@ -5,54 +5,88 @@
     xmlns:a="using:Dt.Base"
     Home="列表,属性">
 
-    <a:WinCenter>
-        <a:Tabs>
-            <a:Tab Title="列表">
-                <!--<ScrollViewer HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Auto" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">-->
-                    <StackPanel>
-                        <Border Height="300" Background="Gray" />
-                        <a:Lv x:Name="_lv">
-                            <DataTemplate>
-                                <Grid Padding="6">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto" />
-                                        <RowDefinition Height="Auto" />
-                                    </Grid.RowDefinitions>
-                                    <Border Background="{StaticResource 主题蓝色}"
+    <a:Win.Resources>
+        <a:Cols x:Key="TableView">
+            <a:Col ID="xm" Title="姓名" Width="120" />
+            <a:Col ID="bh" Title="编号" Width="80" />
+            <a:Col ID="chushengrq" Title="出生日期" Width="120" />
+            <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
+            <a:Col ID="xb" Title="性别" Width="50" />
+            <a:Col ID="hunfou" Title="婚否" Width="50" />
+            <a:Col ID="shengao" Title="身高" Width="100" />
+            <a:Col ID="bumen" Title="所属部门" Width="160" />
+            <a:Col ID="note" Title="备注" Width="200" RowSpan="2" />
+        </a:Cols>
+
+        <DataTemplate x:Key="ListView">
+            <Grid Padding="6">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Border Background="{StaticResource 主题蓝色}"
                         Height="50"
                         Width="50"
                         VerticalAlignment="Center">
-                                        <TextBlock Text="&#xE03C;"
+                    <TextBlock Text="&#xE03C;"
                                FontFamily="{StaticResource IconFont}"
                                FontSize="30"
                                Foreground="White"
                                VerticalAlignment="Center"
                                TextAlignment="Center" />
-                                    </Border>
+                </Border>
 
-                                    <StackPanel Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1">
-                                        <a:Dot ID="xm" />
-                                        <StackPanel Orientation="Horizontal">
-                                            <a:Dot ID="xb" />
-                                            <a:Dot ID="chushengrq" Margin="20,0,0,0" />
-                                        </StackPanel>
-                                    </StackPanel>
-                                    <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
-                                        <a:Dot ID="shenfenzh" />
-                                        <a:Dot ID="bumen" />
-                                        <a:Dot ID="note"
+                <StackPanel Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1">
+                    <a:Dot ID="xm" />
+                    <StackPanel Orientation="Horizontal">
+                        <a:Dot ID="xb" />
+                        <a:Dot ID="chushengrq" Margin="20,0,0,0" />
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
+                    <a:Dot ID="shenfenzh" />
+                    <a:Dot ID="bumen" />
+                    <a:Dot ID="note"
                            Foreground="{StaticResource 深灰边框}"
                            FontSize="12" />
-                                    </StackPanel>
-                                </Grid>
-                            </DataTemplate>
-                        </a:Lv>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="TileView">
+            <Grid Padding="6">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="&#xE03C;"
+                            FontFamily="{StaticResource IconFont}"
+                            FontSize="30"
+                            VerticalAlignment="Center"
+                            TextAlignment="Center" />
+                <StackPanel Margin="10,0,0,0" Grid.Column="1">
+                    <a:Dot ID="xm" />
+                    <a:Dot ID="xb" />
+                    <a:Dot ID="bumen" />
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+    </a:Win.Resources>
+    
+    <a:WinCenter>
+        <a:Tabs>
+            <a:Tab Title="列表">
+                <ScrollViewer x:Name="_sv">
+                    <StackPanel>
+                        <Border x:Name="_top" Height="100" Background="Gray" />
+                        <a:Lv x:Name="_lv" />
+                        <Border x:Name="_bottom" Height="100" Background="Gray" />
                     </StackPanel>
-                <!--</ScrollViewer>-->
+                </ScrollViewer>
             </a:Tab>
         </a:Tabs>
     </a:WinCenter>
@@ -60,7 +94,32 @@
         <a:Tabs>
             <a:Tab Title="属性">
                 <a:Fv Data="{Binding ElementName=_lv}">
-                    
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="5行" Tag="5" Click="OnLoadData" />
+                        <Button Content="100行" Tag="100" Click="OnLoadData" />
+                        <Button Content="1000行" Tag="1000" Click="OnLoadData" />
+                        <Button Content="空数据源" Click="OnLoadNull" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="按部门分组" Click="OnGroup" />
+                        <Button Content="删除分组" Click="OnDelGroup" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="自动行高" Click="OnAutoHeight" />
+                        <Button Content="随机滚动" Click="OnScroll" />
+                    </StackPanel>
+                    <a:CBar Title="顶部区域高度" />
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="超过可视区域" Click="OnTopMax" />
+                        <Button Content="小于可视区域" Click="OnTop" />
+                        <Button Content="为0" Click="OnTopZero" />
+                    </StackPanel>
+                    <a:CBar Title="底部区域高度" />
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="超过可视区域" Click="OnBottomMax" />
+                        <Button Content="小于可视区域" Click="OnBottom" />
+                        <Button Content="为0" Click="OnBottomZero" />
+                    </StackPanel>
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
